<resources>
    <string name="app_name">Farming Friend</string>
    <string name="nav_home">Home</string>
    <string name="nav_market">Market</string>
    <string name="nav_tickets">Tickets</string>
    <string name="nav_weather">Weather</string>
    <string name="nav_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>