<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />



    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/ic_graph"
        android:title="@string/nav_market" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_scanner"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/navigation_tickets"
        android:icon="@drawable/ic_ticket_star"
        android:title="@string/nav_tickets" />
    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_profile_group"
        android:title="@string/nav_weather" />

</menu>
